# AviSynth-VMAF

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  vmaf.rc.in
Third-party licenses/: libvmaf
src/: VMAF.cpp  VMAF.h  VMAF.rc  VMAF2.cpp  plugin.cpp
